# harmony_health_v2

./: .env.example  .gitignore  README.md  c2.json  c3.json  c4.json  chat_resp.json  cn.json  cn2.json  cnew.json  cnone.json  cold.json  dbg.json  dbg_c.json  docker-compose.dev.yml  docker-compose.yml  e2e_demo.js  fin.json  finc.json  harmony-poc.spec.ts  jwt_private.pem  nos.json  package-lock.json  ps.json  psc.json  qa-report.txt  qa_full.js  qa_suite.js  qa_voice.js  s.json  s3.json  s4.json  session_resp.json  sn2.json  snone.json  sold.json  tc.json  voice-frontend-integration.md
backend/: Dockerfile  alembic.ini  careplus_public.pem  jwt_public.pem  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e9e82e0e359_analytics_module.py  9f7eb946efb7_initial_migration.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  permissions.py  rbac.py  (+1 more)
backend/tests/: conftest.py
docker/: livekit-config.yaml
frontend/: Dockerfile  c.json  c2.json  cctx.json  cf.json  chat3.json  chat4.json  ckm.json  kmslow.json  package-lock.json  package.json  playwright.config.ts  s.json  sctx.json  session3.json  sf.json  sid.txt  skm.json
frontend/e2e/: auth.spec.ts  helpers.ts  patients.spec.ts  test-chat-voice.spec.ts
voice_service/: Dockerfile  pyproject.toml
voice_service/app/: agent_worker.py  api.py  config.py  livekit_service.py  main.py  models.py  orchestrator.py  stt.py  tts.py  vad.py
voice_service/tests/: conftest.py  test_api.py  test_orchestrator.py  test_stt.py  test_tts.py
(+125 files in other folders)
